@@ -54,6 +54,7 @@ EOH
     'cups-ppds'  => '$ENV{CUPS_PPDS}',
     'cups-filters' => '$ENV{CUPS_FILTERS}',
     'cups-backends' => '$ENV{CUPS_BACKENDS}',
+    'cups-driver' => '$ENV{LIB_CUPS}/driver',
     'cups-pconf' => '$ENV{CUPS_PCONF}',
     'cups-lpr'   => '$ENV{CUPS_LPR}',
     'cups-lpq'   => '$ENV{CUPS_LPQ}',
@@ -136,6 +137,7 @@ EOF
     'cups-ppds'  => '$ENV{CUPS_PPDS}',
     'cups-filters' => '$ENV{CUPS_FILTERS}',
     'cups-backends' => '$ENV{CUPS_BACKENDS}',
+    'cups-driver' => '$ENV{LIB_CUPS}/driver',
     'cups-pconf' => '$ENV{CUPS_PCONF}',
     'cups-lpr'   => '$ENV{CUPS_LPR}',
     'cups-lpq'   => '$ENV{CUPS_LPQ}',
